--- a/BackEnd/appsettings.json
+++ b/BackEnd/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MSSQLConnection": "Server=tcp:hotelxxx.database.windows.net,1433;Initial Catalog=hotel;User ID=hotelxxx;Password=v20112003V.;MultipleActiveResultSets=True;TrustServerCertificate=True;Trusted_Connection=True;"
+    "MSSQLConnection": "Server=tcp:hotelxxx.database.windows.net,1433;Initial Catalog=hotel;Persist Security Info=False;User ID=hotelxxx;Password=v20112003V.;MultipleActiveResultSets=True;Encrypt=True;TrustServerCertificate=False;"
   },
   "ApplicationSettings": {
     "JWT_Secret": "1234567890123456789@Tunghayho@ASP.NET",
